# nl2audio_cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GMAIL_OAUTH_README.md  Makefile  QUICKSTART.md  README.md  TESTING.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: SECURITY.md
src/nl2audio/: __init__.py  audio.py  cli.py  config.py  feed.py  gmail_oauth.py  ingest.py  ingest_email.py  logging.py  prep.py  store.py  tts.py  utils.py  validation.py  validators.py
tests/: conftest.py  test_db.py  test_gmail_oauth_stub.py  test_prep.py  test_store.py  test_tts_estimate.py  test_validators.py
tests/fixtures/: gmail_message_full.json  newsletter_sample.html  plain_text.txt
