[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl2audio"
version = "0.1.0"
description = "Turn newsletters into a private podcast (CLI)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.0",
  "readability-lxml>=0.8.1",
  "beautifulsoup4>=4.12.3",
  "html5lib>=1.1",
  "trafilatura>=1.9.0",
  "pydub>=0.25.1",
  "mutagen>=1.47.0",
  "feedgen>=0.9.0",
  "tomlkit>=0.13.0",
  "openai>=1.30.1",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-api-python-client>=2.0.0",
  "keyring>=24.0.0"
]

[project.scripts]
nl2audio = "nl2audio.cli:app"
